Fixed layout bug in messages page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -124,6 +124,8 @@ a:hover {
 .message-body {
     width: 100%;
     padding: 5px 10px 5px 5px;
+    word-wrap: break-word;
+    word-break: break-word;
 }
 
 .message-from {
